Edited wiki page Iteration_3__Revisions_9_10_11_12 through web user interface.

--- a/wiki/Iteration_3__Revisions_9_10_11_12.wiki
+++ b/wiki/Iteration_3__Revisions_9_10_11_12.wiki
@@ -108,3 +108,20 @@ This method gets tasks which are dependent on predecessor tasks and automaticall
 ----
 ----
 ----
+
+*Revision 12*
+
+Revision 12 contained some very minor changes to bring the project to its final submission. It contains 2 display changes and an essential bug fix
+  
+----
+* 1. Display Improvements	
+
+To improve performance in the Task page I replaced  the indent left and right images with '<<<' and '>>>'. In the Chart page to improve the readability of the predecessor lines I added line branches to clearly show what task was connected to which predecessor line.
+----
+* 2. Defect Fix	
+
+A minor bug occured in the task page when the last task contained a predecessor value which caused the application to fall over.
+
+----
+----
+----
