Edited wiki page Iteration_3__Revisions_9_10_11_12 through web user interface.

--- a/wiki/Iteration_3__Revisions_9_10_11_12.wiki
+++ b/wiki/Iteration_3__Revisions_9_10_11_12.wiki
@@ -64,4 +64,7 @@ To improve performance in the Task page I replaced  the indent left and right im
 ----
 * 10. Defect Fix	
 
-A major defect that occured in the task page when the last task contained a predecessor value which caused the application to fall over was successfully fixed before updating the live link with the final version.
+A major defect that occured in the task page when the last task contained a predecessor value which caused the application to fall over was successfully fixed.
+----
+* 11. Update Live Link
+The live link was updated with this final version.
